--- a/WebContent/static/main.css
+++ b/WebContent/static/main.css
@@ -44,7 +44,6 @@ a {
   text-decoration: none;
 }
 
-
 main{
   background-color: #cccccc;
 }
@@ -54,7 +53,7 @@ main h2{
   padding-top: 20px;
   padding-bottom: 20px;
   font-family: 'Spartan', sans-serif;
-  font-size: 40px;
+  font-size: 35px;
   font-weight: lighter;
   color: black;
   text-align: center;
@@ -77,15 +76,23 @@ main #services{
   justify-content: space-around;
   align-items: center;
   overflow: auto;
+  margin-bottom: 2em;
 }
 
 main #services img{
   
   max-height: 150px;
   max-width: 200px;
-  -webkit-filter: drop-shadow(5px 5px 5px rgba(0,153,153,0.5) );
-  filter: drop-shadow(5px 5px 5px rgba(0,153,153,0.5));
+  opacity: 1;
+	-webkit-transition: .1s ease-in-out;
+  transition: .1s ease-in-out;
+  -webkit-filter: drop-shadow(0 0 0.75em rgba(0,153,153,0.5) );
+  filter: drop-shadow(0 0 0.75em rgba(0,153,153,0.5));
 
+}
+
+main #services img:hover {
+	opacity: .80;
 }
 
 main #services #widoco {
@@ -96,8 +103,8 @@ main #services #widoco {
 main #services #oops {
   max-height: 80px;
   max-width: 144px;
-
 }
+
 
 main #services img.dark {
   -webkit-filter: grayscale(100%);
@@ -224,6 +231,10 @@ main #services img.dark {
   main #ontologies label{
     margin-right: 15px;
   }
+
+  .smaller{
+    font-size: 10px;
+  }
   
   main .hidden {
       display: none;
@@ -296,26 +307,32 @@ main #services img.dark {
   }
   
   main {
-    padding-bottom: 2.5rem;    /* Footer height */
+    padding-bottom: 3rem;    /* Footer height */
   }
   
   footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 2.5rem;
+    height: 3rem;
     display: flex;
-    align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    background-color: #333333;
     /* Footer height */
   }
   
-  footer{
-    background-color: #333333;
+  footer p{
     font-family: 'Spartan', sans-serif;
     font-size: 10px;
     color: white;
     text-align: center;
+    justify-self: center;
+    margin: auto;
+  }
+
+  footer img{
+    height: 90%;
+    margin-right: 5px;
   }
 
   .error {
@@ -377,6 +394,13 @@ main #services img.dark {
     display: none;
   }
   
+  .green{
+    color: #009999; 
+  }
+  
+  .red{
+  color: crimson;  
+  }
  
 
   /* Reponsive */
@@ -463,6 +487,10 @@ main #services img.dark {
       margin-right: 1%;
       font-size: 30px;
   }
+
+    footer img{
+    display: none;  
+    }
     
   }
   
